src/main/kustomize/dev/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: ing
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/proxy-body-size: 1024m
    nginx.ingress.kubernetes.io/proxy-buffer-size: 8k
    certmanager.k8s.io/cluster-issuer: cscope-ci-certificate-authority
spec:
  rules:
  - host: plessme-dev.bongladesch.com
    http:
      paths:
      - path: /auth
        backend:
          serviceName: keycloak-svc
          servicePort: 8080
      - path: /mongo
        backend:
          serviceName: mongo-express-svc
          servicePort: 8081
      - path: /users
        backend:
          serviceName: backend-http-svc
          servicePort: 8080
      - path: /health
        backend:
          serviceName: backend-http-svc
          servicePort: 8080
      - path: /api
        backend:
          serviceName: backend-http-svc
          servicePort: 8080
      - path: /swagger
        backend:
          serviceName: backend-http-svc
          servicePort: 8080
  tls:
  - hosts:
    - plessme-dev.bongladesch.com
    secretName: plessme-dev-bongladesch-com-tls-secret
